syntax = "proto3";

package internal;

// The Getter service definition.
service Getter {
  // Get an item
  rpc Get (GetRequest) returns (GetReply) {}
}

// The request message containing the bucket and key
message GetRequest {
  string bucket = 1;
  string key = 2;
}

// The response message containing the item informations
message GetReply {
  string key = 1;
  int64 createdAt = 2;
  int64 updatedAt = 3;
  bytes data = 4;
}
