syntax = "proto3";

package rpc;

// The Saver service definition.
service Saver {
  // Sends a greeting
  rpc Save (SaveRequest) returns (SaveReply) {}
}

// The request message containing the user's data.
message SaveRequest {
  string bucket = 1;
  string key = 2;
  bytes data = 3;
}

// The response message containing the status
message SaveReply {
  int32 status = 1;
}
